# quota-watch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: releasing.md
src/quota_watch/: __init__.py  claude.py  cli.py  codex.py  models.py  render.py  wsl.py
tests/: test_claude.py  test_cli.py  test_codex.py  test_windows_ui.py  test_wsl.py
windows/: generate-icon.ps1  publish.ps1
windows/QuotaWatch.Tray/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  QuotaWatch.Tray.csproj  TrayApplicationController.cs
windows/QuotaWatch.Tray.Tests/: Program.cs  QuotaWatch.Tray.Tests.csproj
windows/QuotaWatch.Tray/Models/: QuotaSnapshot.cs
windows/QuotaWatch.Tray/Services/: QuotaCliClient.cs  QuotaSnapshotParser.cs  SnapshotCache.cs  StartupRegistration.cs  TrayIconFactory.cs
windows/QuotaWatch.Tray/ViewModels/: DashboardViewModel.cs
